fix card padding on mobile devices

--- a/styles/about.css
+++ b/styles/about.css
@@ -32,5 +32,7 @@
 @media (max-width: 800px) {
   .about .about-card {
     font-size: 1rem;
+    padding: 60px;
+    margin-bottom: 150px;
   }
 }
